 o extent ggplot to support enrichResult by implementing fortify method. <2013-05-22, Wed>
 o re-implement barplot.enrichResult. <2013-05-23, Thu>
 o enrich.internal support user specifiy background by parameter universe. <2013-05-24, Fri>
 o implement Gene Set Enrichment Analysis algorithm. <2013-05-29, Wed>
 o change setReadable to support groupGO of clusterProfiler. <2013-05-29, Wed> 

CHANGES IN VERSION 1.7.1
------------------------
 o use geom_bar(stat="identity") instead of geom_bar() in barplot for explicitly mapping y value. <2013-05-08, Wed>
 o bug fixed when qvalue can't calculated. <2013-05-02, Thu>
 o bug fixed of enrich.internal, drop those genes that without annotation when calculating sample gene number. <2013-05-02, Thu>
 o change some code to satisfy ReactomePA <2013-03-27, Wed>

CHANGES IN VERSION 1.5.1
------------------------
 o bug fixed in enrich.internal, now return NA rather than throw error, if gene have no ontology annotation <2013-01-22, Fri>

CHANGES IN VERSION 1.3.2
------------------------
 o update codes of plot functions accompaning with ggplot2 (version 0.9.2) <2012-09-06, Thu> 
 o update cnetplot corresponding to igraph version 0.6 <2012-07-11, Wed>
 o parameter showCategory now support term ID vector <2012-07-11, Wed>
 o import termSim and combineScores from GOSemSim. <2012-06,14, Thu>
 o optimize setReadable <2012-05-09, Wed>
 o bug fixed of setReadable method. For those unmapped genes, return the original gene ID. <2012-05-15, Tue>
 o fill color in barplot for Ontology classification. <2012-05-22, Tue>
 o update color scale of cnetplot <2012-06-18, Mon>
  
CHANGES IN VERSION 1.3.1
------------------------
 o update color scheme of cnetplot <2012-04-10, Tue>
 o add simplot for plotting semantic similarity matrix <2012-04-20, Fri>
 o bug fixed of combineScore function for DO semantic similarity matrix
   which containing NA rows of NA coloumns <2012-04-20, Fri>
 o export doSim and geneSim functions <2012-04-20, Fri>
